fixed list items alignment, fixed list icons alignment, applied revature orange on icons

--- a/client-side/src/app/portals/Caliber/settings/screening/tracks/tracks.component.css
+++ b/client-side/src/app/portals/Caliber/settings/screening/tracks/tracks.component.css
@@ -7,6 +7,15 @@ h6 {
   text-align: center;
 }
 
+#xIcon {
+  color: #F26925;
+  margin-left: 10px;
+}
+
+#penIcon {
+  color: #F26925;
+}
+
 /*.wrapper{*/
     /*border: 1px solid black;
     box-shadow: 5px 9px;
@@ -22,10 +31,14 @@ h6 {
     left: 67%;*/
     float: right;
 }
+
+/** not being used **/
 .marker{
     position:absolute;
     left:95%;
 }
+
+/** not being used **/
 .marker2{
     position: absolute;
     left:100%;
